[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Graphics/Splash/noBG-Wildling-Wallpaper 1440.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Splash Godot WildJam.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Splash/big-monster.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Splash/pastel-blast.png" type="Texture" id=4]

[node name="splash Wild Jam" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 516, 298 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 500, 300 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 500, 300 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
